--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2005-05-26  Arwed v. Merkatz <v.merkatz@gmx.net>
+
+	* ext/spc/Makefile.am: add the .Asm file to SOURCES so they're included
+	in 'make dist'
+
 2005-05-25  Thomas Vander Stichele  <thomas at apestaart dot org>
 
 	* configure.ac:
