--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,16 @@
+2005-06-02  Tim-Philipp Müller  <tim at centricular dot net>
+
+	* gst/audiorate/gstaudiorate.c: (gst_audiorate_link),
+	(gst_audiorate_init), (gst_audiorate_chain):
+	  Make case of overlapping buffers work (a sub buffer
+	  with a greater-than-zero offset cannot have the same 
+	  length as the input buffer); also, calculate offset
+	  fields from timestamp/duration and vice versa when
+	  those fields are not set (we later assume they are all
+	  set and valid, so we better set them to something
+	  sane instead of doing calculations with random input
+	  values). (also fixes #305428)
+
 2005-06-02  Stefan Kost  <ensonic@users.sf.net>
 
 	* ext/faad/gstfaad.c: (gst_faad_sinkconnect), (gst_faad_chain):
