--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2005-06-06  Benjamin Otte  <in7y118@public.uni-hamburg.de>
+
+	* gst-libs/gst/audio/multichannel.c:
+	(gst_audio_set_structure_channel_positions_list):
+	  revert my patch from 2005-06-01. I confused arrays and lists.
+
 2005-06-03  Ronald S. Bultje  <rbultje@ronald.bitfreak.net>
 
 	* ext/cdparanoia/gstcdparanoia.c: (set_track), (cdparanoia_event):
