--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2005-06-08  Arwed v. Merkatz  <v.merkatz@gmx.net>
+
+	* gst/matroska/matroska-demux.c: (gst_matroska_demux_video_caps),
+	(gst_matroska_demux_plugin_init):
+	* gst/matroska/matroska-ids.h:
+	Support playback of H264 video in matroska.
+
 2005-06-08  Ronald S. Bultje  <rbultje@ronald.bitfreak.net>
 
 	* gst/qtdemux/qtdemux.c: (qtdemux_audio_caps):
