--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2005-06-09  Ronald S. Bultje  <rbultje@ronald.bitfreak.net>
+
+	* ext/mad/gstmad.c: (gst_mad_check_caps_reset), (gst_mad_chain):
+	  Update total_samples after new header, since it will affect our
+	  timestamps. Fixes #140237.
+
 2005-06-09  Arwed v. Merkatz  <v.merkatz@gmx.net>
 
 	* gst/matroska/matroska-demux.c:
