--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2005-06-10  Ronald S. Bultje  <rbultje@ronald.bitfreak.net>
+
+	* ext/alsa/gstalsa.c: (gst_alsa_open_audio):
+	* gst/playback/gstplaybasebin.c: (prepare_output),
+	(gst_play_base_bin_change_state):
+	* sys/xvimage/xvimagesink.c: (gst_xvimagesink_get_xv_support):
+	  Fix some error domains; don't print the URI in playbin errors.
+
 2005-06-09  Ronald S. Bultje  <rbultje@ronald.bitfreak.net>
 
 	* gconf/gstreamer.schemas.in:
