--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,27 @@
+2005-06-11  Tim-Philipp Müller  <tim at centricular dot net>
+
+
+	* configure.ac:
+	  Require cairo 0.5.x
+	  
+	* ext/cairo/gstcairo.c:
+	  Change plugin name to 'cairo' - 'timeoverlay' doesn't make
+	  much sense and conflicts with the pango timeoverlay plugin.
+
+	* ext/cairo/gsttextoverlay.c: (gst_cairotextoverlay_get_type),
+	(gst_textoverlay_render_text), (gst_textoverlay_loop),
+	(gst_textoverlay_font_init), (gst_textoverlay_finalize),
+	(gst_textoverlay_init), (gst_textoverlay_set_property):
+	* ext/cairo/gsttextoverlay.h:
+	* ext/cairo/gsttimeoverlay.c: (gst_cairotimeoverlay_get_type),
+	(gst_timeoverlay_class_init), (gst_timeoverlay_setup),
+	(gst_timeoverlay_planar411):
+	* ext/cairo/gsttimeoverlay.h:
+	  Make compile and somewhat work with cairo 0.5. The textoverlay
+	  plugin is bitrotten and/or unfinished though and needs more
+	  work (text positioning, invalid memory access, parse font-desc
+	  property properly).
+
 2005-06-10  Ronald S. Bultje  <rbultje@ronald.bitfreak.net>
 
 	* gst/playback/gstplaybasebin.c: (gst_play_base_bin_change_state):
